# capture-helper

./: .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  README.md  pyproject.toml  setup.py
capture_helper/: __init__.py  api.py  camera.py  cli_argparse.py  cli_click.py  mcp.py  mic.py  sources.py
tests/: test_api.py  test_cli.py  test_mcp.py  test_sources.py  test_v01_features.py
